make header for site

--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -1,3 +1,43 @@
-h1 {
+@font-face {
+    font-family: "Awesome-Solid";
+    src: '../fonts/fa-solid-900.ttf';
+}
+// --Colors--
+$dark_blue: #1B1D2A;
+
+.header {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 68px;
+    margin: auto;
+
+    border-bottom: solid 1px $dark_blue;
+}
+
+.logo img {
+    padding-top: 6px;
+}
+
+.header-link {
+    margin-left: 80px;
+
+    font-family: 'Blanch';
     font-size: 32px;
+    line-height: 35px;
+    color: $dark_blue;
+    text-decoration: none;
+}
+
+.settings-button {
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+}
+
+.settings-button::after {
+    content: "\f013";
+    font-family: FontAwesome;
+    font-size: 24px;
+    cursor: pointer;
 }
