--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -8,7 +8,7 @@ $dark_blue: #1B1D2A;
 
 .footer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 70%;
     height: 150px;
@@ -38,9 +38,12 @@ $font_size: 22px;
 
 .copyright {
     order: 2;
+    margin-right: 50px;
+    width: 200px;
     font-family: 'Amsterdam';
-    font-size: $font_size;
+    font-size: $font_size - 4;
     color: $dark_blue;
+    text-align: center;
 }
 
 .social-link {
